# Example-project-DB

./: DBSolution.py  Objectstore.py  docstring.py  index.html  project_py.html  tdd dbsolution.py  test_project_py.html  uppgift 2unittest.py
DBS_V1/: README.md  pyproject.toml
DBS_V1/tests/: tdd
DBS_version1/: setup.py
DBS_version1/DBSpythonlib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
DBS_version1/mypythonlib.egg-info/: PKG-INFO  SOURCES.txt
Database-Project/: databaseSolution.py
